--- a/frontend-bar/src/assets/i18n/en.json
+++ b/frontend-bar/src/assets/i18n/en.json
@@ -1,12 +1,12 @@
 {
-    "login": "Log in",
+    "login": "Login",
     "name": "Name",
     "nameEvent": "Event Name",
     "imageProduct": "Product Image",
     "nameProduct": "Product Name",
     "nameUser": "User Name",
     "price": "Price",
-    "stock": "Stock",
+    "stock": "Quantity",
     "nameRol": "Role Name",
     "nameStatus": "Status Name",
     "nameTable": "Table Name",
@@ -20,19 +20,19 @@
     "timeEvent": "Event Time",
     "email": "Email",
     "password": "Password",
-    "event": "event",
+    "event": "Event",
     "accept": "Accept",
     "add": "Add",
-    "status": "status",
+    "status": "Status",
     "rol": "Role",
-    "table": "table",
+    "table": "Table",
     "rolNav": "ROLES",
     "stateNav": "STATES",
     "tableNav": "TABLES",
-    "rols": "roles",
-    "user": "user",
+    "rols": "Role",
+    "user": "User",
     "filter": "Filter",
-    "invalidTime": "The entered time is less than the current time",
+    "invalidTime": "The entered time is earlier than the current time",
     "required": "All fields are required",
     "accessDeneged": "Access denied",
     "errorOccurred": "An error occurred, contact the Administrator",
@@ -40,8 +40,8 @@
     "requiredNameProduct": "Product name is required",
     "requiredImageProduct": "Product image is required",
     "requiredPrice": "Price is required",
-    "requiredStock": "Stock is required",
-    "chooseImage": "Choose an image",
+    "requiredStock": "Quantity is required",
+    "chooseImage": "Select an image",
     "requiredNameEvent": "Event name is required",
     "requiredDateEvent": "Event date is required",
     "requiredTimeEvent": "Event time is required",
@@ -49,28 +49,31 @@
     "requiredPassword": "Password is required",
     "requiredStatus": "Status is required",
     "requiredRol": "Role is required",
-    "invalidEmail": "Invalid email address",
+    "invalidEmail": "Invalid email",
     "minPassword": "Password must be at least 3 characters",
-    "saveUser": "User added successfully",
-    "saveRol": "Role added successfully",
-    "saveEvent": "Event added successfully",
-    "saveProduct": "Product added successfully",
-    "saveStatus": "Status added successfully",
-    "saveTable": "Table added successfully",
-    "editUser": "User edited successfully",
-    "editRol": "Role edited successfully",
-    "editEvent": "Event edited successfully",
-    "editProduct": "Product edited successfully",
-    "editTable": "Table edited successfully",
+    "saveUser": "User successfully added",
+    "saveRol": "Role successfully added",
+    "saveEvent": "Event successfully added",
+    "saveProduct": "Product successfully added",
+    "saveStatus": "Status successfully added",
+    "saveTable": "Table successfully added",
+    "saveOrder": "Order successfully added",
+    "editUser": "User successfully edited",
+    "editRol": "Role successfully edited",
+    "editEvent": "Event successfully edited",
+    "editProduct": "Product successfully edited",
+    "editTable": "Table successfully edited",
+    "editOrder": "Order successfully edited",
     "aggregate": "Added",
     "edited": "Edited",
     "removed": "Deleted",
-    "deleteUser": "User deleted successfully",
-    "deleteEvent": "Event deleted successfully",
-    "deleteStatus": "Status deleted successfully",
-    "deleteProduct": "Product deleted successfully",
-    "deleteRol": "Role deleted successfully",
-    "deleteTable": "Table deleted successfully",
+    "deleteUser": "User successfully deleted",
+    "deleteEvent": "Event successfully deleted",
+    "deleteStatus": "Status successfully deleted",
+    "deleteProduct": "Product successfully deleted",
+    "deleteRol": "Role successfully deleted",
+    "deleteTable": "Table successfully deleted",
+    "deleteOrder": "Order successfully deleted",
     "events": "EVENTS",
     "products": "PRODUCTS",
     "users": "USERS",
@@ -78,20 +81,27 @@
     "home": "HOME",
     "contactUs": "CONTACT US",
     "order": "ORDER",
-    "life": "LIVE",
+    "life": "Live",
     "disfrut": "AND ENJOY",
     "moreText": "Enjoy our cozy bar, where every drink tells a story and a unique experience. We are ready to surprise you with original creations and reinvented classics. Come and discover a place where good company and good drinks meet.",
-    "whoAre": "Who we are?",
-    "aboutUs": "Welcome to Hollow-Bar! We are a cozy bar located in Bogotá av 11 #1, known for our excellent selection of drinks and friendly atmosphere. Come and enjoy a unique experience with us!",
+    "whoAre":"Who are we?",
+    "aboutUs":"Welcome to Hollow-Bar! We are a cozy bar located in Bogotá av 11 #1, known for our excellent selection of drinks and friendly atmosphere. Come and enjoy a unique experience with us!",
     "cold": "COLD",
-    "cold2": "HOW ABOUT A COLD",
-    "banner": "Just order it, we take care of the rest. Bring life to the moments with a cold one.",
-    "navUser": "Users",
-    "navEvent": "Events",
-    "navRol": "Roles",
-    "navStatus": "Statuses",
-    "navTable": "Tables",
-    "navProduct": "Products",
+    "cold2": "HOW ABOUT A COLD ONE",
+    "banner": "Just order it, we take care of the rest. Bring life to moments with a cold one.",
+    "navUser":"Users",
+    "navEvent":"Events",
+    "navRol":"Roles",
+    "navStatus":"Status",
+    "navTable":"Tables",
+    "navProduct":"Products",
     "statusList": "Status",
-    "changeImageProduct": "Change product image"
+    "changeImageProduct": "Change image",
+    "navOrder": "Orders",
+    "orders": "ORDERS",
+    "typeDocument": "Document Type",
+    "numDocument": "Document Number",
+    "gridTable": "Table",
+    "titleOrder": "Order",
+    "statusOrder": "order status"
 }
