--- a/frontend-bar/src/assets/i18n/es.json
+++ b/frontend-bar/src/assets/i18n/es.json
@@ -57,11 +57,13 @@
     "saveProduct": "Producto agregado correctamente",
     "saveStatus": "Estado agregado correctamente",
     "saveTable": "Mesa agregada correctamente",
+    "saveOrder": "Orden agregada correctamente",
     "editUser": "Usuario editado correctamente",
     "editRol": "Rol editado correctamente",
     "editEvent": "Evento editado correctamente",
     "editProduct": "Producto editado correctamente",
     "editTable": "Mesa editada correctamente",
+    "editOrder": "Orden editada correctamente",
     "aggregate": "Agregado",
     "edited": "Editado",
     "removed": "Eliminado",
@@ -71,6 +73,7 @@
     "deleteProduct": "Producto eliminado correctamente",
     "deleteRol": "Rol eliminado correctamente",
     "deleteTable": "Mesa eliminada correctamente",
+    "deleteOrder": "Orden eliminada correctamente",
     "events": "EVENTOS",
     "products": "PRODUCTOS",
     "users": "USUARIOS",
@@ -93,5 +96,12 @@
     "navTable":"Mesas",
     "navProduct":"Productos",
     "statusList": "Estado",
-    "changeImageProduct": "Cambiar imagen"
+    "changeImageProduct": "Cambiar imagen",
+    "navOrder": "Ordenes",
+    "orders": "ORDENES",
+    "typeDocument": "Tipo de documento",
+    "numDocument": "Número de documento",
+    "gridTable": "Mesa",
+    "titleOrder": "orden",
+    "statusOrder": "estado de la orden"
 }
