--- a/frontend-bar/src/assets/i18n/en.json
+++ b/frontend-bar/src/assets/i18n/en.json
@@ -50,6 +50,9 @@
     "requiredStatus": "Status is required",
     "requiredRol": "Role is required",
     "invalidEmail": "Invalid email",
+    "requiredTipeDocument": "The document type is required",
+    "requiredNumberDocument": "The document number is required",
+    "requireTable": "The table is required",
     "minPassword": "Password must be at least 3 characters",
     "saveUser": "User successfully added",
     "saveRol": "Role successfully added",
