--- a/frontend-bar/src/assets/i18n/es.json
+++ b/frontend-bar/src/assets/i18n/es.json
@@ -50,6 +50,9 @@
     "requiredStatus": "El estado es obligatorio",
     "requiredRol": "El rol es obligatorio",
     "invalidEmail": "El correo electrónico no es valido",
+    "requiredTipeDocument": "El tipo de documento es obligatorio",
+    "requiredNumberDocument": "El número documento es obligatorio",
+    "requireTable": "La mesa es obligatoria",
     "minPassword": "La contraseña debe ser mínimo de 3 caracteres",
     "saveUser": "Usuario agregado correctamente",
     "saveRol": "Rol agregado correctamente",
