Changes desing and functionality

--- a/frontend-bar/src/assets/i18n/en.json
+++ b/frontend-bar/src/assets/i18n/en.json
@@ -16,21 +16,21 @@
     "cancel": "Cancel",
     "confirm": "Confirm",
     "dateEvent": "Event Date",
-    "setting": "SETTINGS",
+    "setting": "SETTING",
     "timeEvent": "Event Time",
     "email": "Email",
     "password": "Password",
-    "event": "Event",
+    "event": "event",
     "accept": "Accept",
     "add": "Add",
-    "status": "Status",
+    "status": "status",
     "rol": "Role",
-    "table": "Table",
+    "table": "table",
     "rolNav": "ROLES",
-    "stateNav": "STATES",
+    "stateNav": "STATUSES",
     "tableNav": "TABLES",
-    "rols": "Role",
-    "user": "User",
+    "rols": "role",
+    "user": "user",
     "filter": "Filter",
     "invalidTime": "The entered time is earlier than the current time",
     "required": "All fields are required",
@@ -41,7 +41,7 @@
     "requiredImageProduct": "Product image is required",
     "requiredPrice": "Price is required",
     "requiredStock": "Quantity is required",
-    "chooseImage": "Select an image",
+    "chooseImage": "Choose an image",
     "requiredNameEvent": "Event name is required",
     "requiredDateEvent": "Event date is required",
     "requiredTimeEvent": "Event time is required",
@@ -50,33 +50,34 @@
     "requiredStatus": "Status is required",
     "requiredRol": "Role is required",
     "invalidEmail": "Invalid email",
-    "requiredTipeDocument": "The document type is required",
-    "requiredNumberDocument": "The document number is required",
-    "requireTable": "The table is required",
+    "requiredTipeDocument": "Document type is required",
+    "requiredNumberDocument": "Document number is required",
+    "requireTable": "Table is required",
     "minPassword": "Password must be at least 3 characters",
-    "saveUser": "User successfully added",
-    "saveRol": "Role successfully added",
-    "saveEvent": "Event successfully added",
-    "saveProduct": "Product successfully added",
-    "saveStatus": "Status successfully added",
-    "saveTable": "Table successfully added",
-    "saveOrder": "Order successfully added",
-    "editUser": "User successfully edited",
-    "editRol": "Role successfully edited",
-    "editEvent": "Event successfully edited",
-    "editProduct": "Product successfully edited",
-    "editTable": "Table successfully edited",
-    "editOrder": "Order successfully edited",
+    "saveUser": "User added successfully",
+    "saveRol": "Role added successfully",
+    "saveEvent": "Event added successfully",
+    "saveProduct": "Product added successfully",
+    "saveStatus": "Status added successfully",
+    "saveTable": "Table added successfully",
+    "saveOrder": "Order added successfully",
+    "editUser": "User edited successfully",
+    "editRol": "Role edited successfully",
+    "editEvent": "Event edited successfully",
+    "editProduct": "Product edited successfully",
+    "editTable": "Table edited successfully",
+    "editStatus": "Status edited successfully",
+    "editOrder": "Order edited successfully",
     "aggregate": "Added",
     "edited": "Edited",
     "removed": "Deleted",
-    "deleteUser": "User successfully deleted",
-    "deleteEvent": "Event successfully deleted",
-    "deleteStatus": "Status successfully deleted",
-    "deleteProduct": "Product successfully deleted",
-    "deleteRol": "Role successfully deleted",
-    "deleteTable": "Table successfully deleted",
-    "deleteOrder": "Order successfully deleted",
+    "deleteUser": "User deleted successfully",
+    "deleteEvent": "Event deleted successfully",
+    "deleteStatus": "Status deleted successfully",
+    "deleteProduct": "Product deleted successfully",
+    "deleteRol": "Role deleted successfully",
+    "deleteTable": "Table deleted successfully",
+    "deleteOrder": "Order deleted successfully",
     "events": "EVENTS",
     "products": "PRODUCTS",
     "users": "USERS",
@@ -86,18 +87,18 @@
     "order": "ORDER",
     "life": "Live",
     "disfrut": "AND ENJOY",
-    "moreText": "Enjoy our cozy bar, where every drink tells a story and a unique experience. We are ready to surprise you with original creations and reinvented classics. Come and discover a place where good company and good drinks meet.",
-    "whoAre":"Who are we?",
-    "aboutUs":"Welcome to Hollow-Bar! We are a cozy bar located in Bogotá av 11 #1, known for our excellent selection of drinks and friendly atmosphere. Come and enjoy a unique experience with us!",
+    "moreText": "Enjoy our cozy bar, where every drink tells a story and offers a unique experience. We are ready to surprise you with original creations and reimagined classics. Come and discover a place where good company and good drinks meet.",
+    "whoAre": "Who are we?",
+    "aboutUs": "Welcome to Hollow-Bar! We are a cozy bar located in Bogotá av 11 #1, known for our excellent selection of drinks and friendly atmosphere. Come and enjoy a unique experience with us!",
     "cold": "COLD",
     "cold2": "HOW ABOUT A COLD ONE",
-    "banner": "Just order it, we take care of the rest. Bring life to moments with a cold one.",
-    "navUser":"Users",
-    "navEvent":"Events",
-    "navRol":"Roles",
-    "navStatus":"Status",
-    "navTable":"Tables",
-    "navProduct":"Products",
+    "banner": "Just order it, we'll take care of the rest. Bring life to the moments with a cold one.",
+    "navUser": "Users",
+    "navEvent": "Events",
+    "navRol": "Roles",
+    "navStatus": "Statuses",
+    "navTable": "Tables",
+    "navProduct": "Products",
     "statusList": "Status",
     "changeImageProduct": "Change image",
     "navOrder": "Orders",
@@ -105,6 +106,17 @@
     "typeDocument": "Document Type",
     "numDocument": "Document Number",
     "gridTable": "Table",
-    "titleOrder": "Order",
-    "statusOrder": "order status"
+    "titleOrder": "order",
+    "statusOrder": "order status",
+    "statuses": {
+        "Active": "Activo",
+        "Inactive": "Inactivo",
+        "Paid": "Pagado",
+        "Canceled": "Cancelado"
+    },
+    "role": {
+        "Admistrator": "Administrador",
+        "Employee": "Empleado"
+    },
+    "originalName": "Original name"
 }
