--- a/frontend-bar/src/assets/i18n/es.json
+++ b/frontend-bar/src/assets/i18n/es.json
@@ -66,6 +66,7 @@
     "editEvent": "Evento editado correctamente",
     "editProduct": "Producto editado correctamente",
     "editTable": "Mesa editada correctamente",
+    "editStatus": "Estado editado correctamente",
     "editOrder": "Orden editada correctamente",
     "aggregate": "Agregado",
     "edited": "Editado",
@@ -87,17 +88,17 @@
     "life": "Vive",
     "disfrut": "Y DISFRUTA",
     "moreText": "Disfruta de nuestro acogedor bar, donde cada trago cuenta una historia y una experiencia única. Estamos listos para sorprenderte con creaciones originales y clásicos reinventados. Ven y descubre un lugar donde la buena compañía y los buenos tragos se encuentran.",
-    "whoAre":"¿Quiénes somos?",
-    "aboutUs":"¡Bienvenidos a Hollow-Bar! Somos un bar acogedor ubicado en Bogotá av 11 #1, conocido por nuestra excelente selección de bebidas y ambiente amigable. ¡Ven y disfruta de una experiencia única con nosotros!",
+    "whoAre": "¿Quiénes somos?",
+    "aboutUs": "¡Bienvenidos a Hollow-Bar! Somos un bar acogedor ubicado en Bogotá av 11 #1, conocido por nuestra excelente selección de bebidas y ambiente amigable. ¡Ven y disfruta de una experiencia única con nosotros!",
     "cold": "FRIA",
     "cold2": "QUE TAL UNA FRIA",
     "banner": "Solo pidela, nosotros nos encargamos del resto. Ponle vida a los momentos con una fria.",
-    "navUser":"Usuarios",
-    "navEvent":"Eventos",
-    "navRol":"Roles",
-    "navStatus":"Estados",
-    "navTable":"Mesas",
-    "navProduct":"Productos",
+    "navUser": "Usuarios",
+    "navEvent": "Eventos",
+    "navRol": "Roles",
+    "navStatus": "Estados",
+    "navTable": "Mesas",
+    "navProduct": "Productos",
     "statusList": "Estado",
     "changeImageProduct": "Cambiar imagen",
     "navOrder": "Ordenes",
@@ -106,5 +107,16 @@
     "numDocument": "Número de documento",
     "gridTable": "Mesa",
     "titleOrder": "orden",
-    "statusOrder": "estado de la orden"
+    "statusOrder": "estado de la orden",
+    "statuses": {
+        "Active": "Activo",
+        "Inactive": "Inactivo",
+        "Paid": "Pagado",
+        "Canceled": "Cancelado"
+    },
+    "role": {
+        "Admistrator": "Administrador",
+        "Employee": "Empleado"
+    },
+    "originalName": "Nombre original"
 }
