--- a/frontend-bar/src/assets/i18n/en.json
+++ b/frontend-bar/src/assets/i18n/en.json
@@ -118,5 +118,6 @@
         "Admistrator": "Administrador",
         "Employee": "Empleado"
     },
-    "originalName": "Original name"
+    "originalName": "Original name",
+    "chart": "Charts"
 }
