--- a/frontend-bar/src/assets/i18n/es.json
+++ b/frontend-bar/src/assets/i18n/es.json
@@ -118,5 +118,6 @@
         "Admistrator": "Administrador",
         "Employee": "Empleado"
     },
-    "originalName": "Nombre original"
+    "originalName": "Nombre original",
+    "chart": "Gráficos"
 }
