--- a/frontend-bar/src/assets/i18n/en.json
+++ b/frontend-bar/src/assets/i18n/en.json
@@ -119,5 +119,6 @@
         "Employee": "Empleado"
     },
     "originalName": "Original name",
-    "chart": "Charts"
+    "chart": "Charts",
+    "chartNav": "CHARTS"
 }
