--- a/frontend-bar/src/assets/i18n/es.json
+++ b/frontend-bar/src/assets/i18n/es.json
@@ -119,5 +119,6 @@
         "Employee": "Empleado"
     },
     "originalName": "Nombre original",
-    "chart": "Gráficos"
+    "chart": "Gráficos",
+    "chartNav": "GRÁFICOS"
 }
