--- a/frontend-bar/src/assets/i18n/en.json
+++ b/frontend-bar/src/assets/i18n/en.json
@@ -6,7 +6,7 @@
     "nameProduct": "Product Name",
     "nameUser": "User Name",
     "price": "Price",
-    "stock": "Quantity",
+    "stock": "Stock",
     "nameRol": "Role Name",
     "nameStatus": "Status Name",
     "nameTable": "Table Name",
@@ -27,7 +27,7 @@
     "rol": "Role",
     "table": "table",
     "rolNav": "ROLES",
-    "stateNav": "STATUSES",
+    "stateNav": "STATES",
     "tableNav": "TABLES",
     "rols": "role",
     "user": "user",
@@ -40,8 +40,8 @@
     "requiredNameProduct": "Product name is required",
     "requiredImageProduct": "Product image is required",
     "requiredPrice": "Price is required",
-    "requiredStock": "Quantity is required",
-    "chooseImage": "Choose an image",
+    "requiredStock": "Stock is required",
+    "chooseImage": "Select an image",
     "requiredNameEvent": "Event name is required",
     "requiredDateEvent": "Event date is required",
     "requiredTimeEvent": "Event time is required",
@@ -54,30 +54,30 @@
     "requiredNumberDocument": "Document number is required",
     "requireTable": "Table is required",
     "minPassword": "Password must be at least 3 characters",
-    "saveUser": "User added successfully",
-    "saveRol": "Role added successfully",
-    "saveEvent": "Event added successfully",
-    "saveProduct": "Product added successfully",
-    "saveStatus": "Status added successfully",
-    "saveTable": "Table added successfully",
-    "saveOrder": "Order added successfully",
-    "editUser": "User edited successfully",
-    "editRol": "Role edited successfully",
-    "editEvent": "Event edited successfully",
-    "editProduct": "Product edited successfully",
-    "editTable": "Table edited successfully",
-    "editStatus": "Status edited successfully",
-    "editOrder": "Order edited successfully",
+    "saveUser": "User successfully added",
+    "saveRol": "Role successfully added",
+    "saveEvent": "Event successfully added",
+    "saveProduct": "Product successfully added",
+    "saveStatus": "Status successfully added",
+    "saveTable": "Table successfully added",
+    "saveOrder": "Order successfully added",
+    "editUser": "User successfully edited",
+    "editRol": "Role successfully edited",
+    "editEvent": "Event successfully edited",
+    "editProduct": "Product successfully edited",
+    "editTable": "Table successfully edited",
+    "editStatus": "Status successfully edited",
+    "editOrder": "Order successfully edited",
     "aggregate": "Added",
     "edited": "Edited",
     "removed": "Deleted",
-    "deleteUser": "User deleted successfully",
-    "deleteEvent": "Event deleted successfully",
-    "deleteStatus": "Status deleted successfully",
-    "deleteProduct": "Product deleted successfully",
-    "deleteRol": "Role deleted successfully",
-    "deleteTable": "Table deleted successfully",
-    "deleteOrder": "Order deleted successfully",
+    "deleteUser": "User successfully deleted",
+    "deleteEvent": "Event successfully deleted",
+    "deleteStatus": "Status successfully deleted",
+    "deleteProduct": "Product successfully deleted",
+    "deleteRol": "Role successfully deleted",
+    "deleteTable": "Table successfully deleted",
+    "deleteOrder": "Order successfully deleted",
     "events": "EVENTS",
     "products": "PRODUCTS",
     "users": "USERS",
@@ -87,7 +87,7 @@
     "order": "ORDER",
     "life": "Live",
     "disfrut": "AND ENJOY",
-    "moreText": "Enjoy our cozy bar, where every drink tells a story and offers a unique experience. We are ready to surprise you with original creations and reimagined classics. Come and discover a place where good company and good drinks meet.",
+    "moreText": "Enjoy our cozy bar, where every drink tells a story and a unique experience. We are ready to surprise you with original creations and reinvented classics. Come and discover a place where good company and good drinks meet.",
     "whoAre": "Who are we?",
     "aboutUs": "Welcome to Hollow-Bar! We are a cozy bar located in Bogotá av 11 #1, known for our excellent selection of drinks and friendly atmosphere. Come and enjoy a unique experience with us!",
     "cold": "COLD",
@@ -96,7 +96,7 @@
     "navUser": "Users",
     "navEvent": "Events",
     "navRol": "Roles",
-    "navStatus": "Statuses",
+    "navStatus": "States",
     "navTable": "Tables",
     "navProduct": "Products",
     "statusList": "Status",
@@ -109,15 +109,18 @@
     "titleOrder": "order",
     "statusOrder": "order status",
     "statuses": {
-        "Active": "Activo",
-        "Inactive": "Inactivo",
-        "Paid": "Pagado",
-        "Canceled": "Cancelado"
+        "Active": "Active",
+        "Inactive": "Inactive",
+        "Paid": "Paid",
+        "Canceled": "Canceled"
     },
     "role": {
-        "Admistrator": "Administrador",
-        "Employee": "Empleado"
+        "Admistrator": "Administrator",
+        "Employee": "Employee"
     },
-    "originalName": "Original name",
-    "chart": "Charts"
+    "originalName": "Original Name",
+    "chart": "Charts",
+    "canceleds": "Canceled",
+    "cancelOrder": "Order successfully canceled",
+    "paided": "Pay"
 }
