--- a/frontend-bar/src/assets/i18n/es.json
+++ b/frontend-bar/src/assets/i18n/es.json
@@ -123,5 +123,7 @@
     "canceleds": "Cancelado",
     "cancelOrder": "Orden cancelada correctamente",
     "paided": "Pagar",
-    "request": "Pedir"
+    "request": "Pedir",
+    "askFor": "Pedir",
+    "orderEmployee": " Pedido"
 }
