--- a/frontend-bar/src/assets/i18n/en.json
+++ b/frontend-bar/src/assets/i18n/en.json
@@ -16,21 +16,21 @@
     "cancel": "Cancel",
     "confirm": "Confirm",
     "dateEvent": "Event Date",
-    "setting": "SETTING",
+    "setting": "SETTINGS",
     "timeEvent": "Event Time",
     "email": "Email",
     "password": "Password",
-    "event": "event",
+    "event": "Event",
     "accept": "Accept",
     "add": "Add",
-    "status": "status",
+    "status": "Status",
     "rol": "Role",
-    "table": "table",
+    "table": "Table",
     "rolNav": "ROLES",
-    "stateNav": "STATES",
+    "stateNav": "STATUSES",
     "tableNav": "TABLES",
-    "rols": "role",
-    "user": "user",
+    "rols": "Roles",
+    "user": "User",
     "filter": "Filter",
     "invalidTime": "The entered time is earlier than the current time",
     "required": "All fields are required",
@@ -41,7 +41,7 @@
     "requiredImageProduct": "Product image is required",
     "requiredPrice": "Price is required",
     "requiredStock": "Stock is required",
-    "chooseImage": "Select an image",
+    "chooseImage": "Choose an image",
     "requiredNameEvent": "Event name is required",
     "requiredDateEvent": "Event date is required",
     "requiredTimeEvent": "Event time is required",
@@ -54,30 +54,32 @@
     "requiredNumberDocument": "Document number is required",
     "requireTable": "Table is required",
     "minPassword": "Password must be at least 3 characters",
-    "saveUser": "User successfully added",
-    "saveRol": "Role successfully added",
-    "saveEvent": "Event successfully added",
-    "saveProduct": "Product successfully added",
-    "saveStatus": "Status successfully added",
-    "saveTable": "Table successfully added",
-    "saveOrder": "Order successfully added",
-    "editUser": "User successfully edited",
-    "editRol": "Role successfully edited",
-    "editEvent": "Event successfully edited",
-    "editProduct": "Product successfully edited",
-    "editTable": "Table successfully edited",
-    "editStatus": "Status successfully edited",
-    "editOrder": "Order successfully edited",
+    "saveUser": "User added successfully",
+    "saveOrderProduct": "Product added to order successfully",
+    "saveRol": "Role added successfully",
+    "saveEvent": "Event added successfully",
+    "saveProduct": "Product added successfully",
+    "saveStatus": "Status added successfully",
+    "saveTable": "Table added successfully",
+    "saveOrder": "Order added successfully",
+    "editUser": "User edited successfully",
+    "editRol": "Role edited successfully",
+    "editEvent": "Event edited successfully",
+    "editProduct": "Product edited successfully",
+    "editTable": "Table edited successfully",
+    "editStatus": "Status edited successfully",
+    "editOrder": "Order edited successfully",
     "aggregate": "Added",
     "edited": "Edited",
     "removed": "Deleted",
-    "deleteUser": "User successfully deleted",
-    "deleteEvent": "Event successfully deleted",
-    "deleteStatus": "Status successfully deleted",
-    "deleteProduct": "Product successfully deleted",
-    "deleteRol": "Role successfully deleted",
-    "deleteTable": "Table successfully deleted",
-    "deleteOrder": "Order successfully deleted",
+    "deleteUser": "User deleted successfully",
+    "deleteOrderPRoduct": "Product removed from order successfully",
+    "deleteEvent": "Event deleted successfully",
+    "deleteStatus": "Status deleted successfully",
+    "deleteProduct": "Product deleted successfully",
+    "deleteRol": "Role deleted successfully",
+    "deleteTable": "Table deleted successfully",
+    "deleteOrder": "Order deleted successfully",
     "events": "EVENTS",
     "products": "PRODUCTS",
     "users": "USERS",
@@ -92,11 +94,11 @@
     "aboutUs": "Welcome to Hollow-Bar! We are a cozy bar located in Bogotá av 11 #1, known for our excellent selection of drinks and friendly atmosphere. Come and enjoy a unique experience with us!",
     "cold": "COLD",
     "cold2": "HOW ABOUT A COLD ONE",
-    "banner": "Just order it, we'll take care of the rest. Bring life to the moments with a cold one.",
+    "banner": "Just order it, we'll take care of the rest. Bring moments to life with a cold one.",
     "navUser": "Users",
     "navEvent": "Events",
     "navRol": "Roles",
-    "navStatus": "States",
+    "navStatus": "Statuses",
     "navTable": "Tables",
     "navProduct": "Products",
     "statusList": "Status",
@@ -106,8 +108,8 @@
     "typeDocument": "Document Type",
     "numDocument": "Document Number",
     "gridTable": "Table",
-    "titleOrder": "order",
-    "statusOrder": "order status",
+    "titleOrder": "Order",
+    "statusOrder": "Order Status",
     "statuses": {
         "Active": "Active",
         "Inactive": "Inactive",
@@ -121,8 +123,10 @@
     "originalName": "Original Name",
     "chart": "Charts",
     "canceleds": "Canceled",
-    "cancelOrder": "Order successfully canceled",
-    "paided": "Pay",
-    "askFor": "Ask for",
-    "orderEmployee": "Order"
+    "cancelOrder": "Order canceled successfully",
+    "paided": "Paid",
+    "request": "Ask for",
+    "orderEmployee": "Order",
+    "selectProduct": "Select product",
+    "subTotal": "Subtotal"
 }
